PHP 4                                                                      NEWS
|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||
?? Aug 2003, Version 4.3.3RC4
- Fixed bug #25044 (header("Location:") changing HTTP status). (Marcus)
- Fixed bug #25037 (Possible infinite loop inside SendText()). (Ilia)
- Fixed bug #25007 (rand() & mt_rand() seed RNG every call). (Jani)
- Fixed bug #24989 (external libexpat conflicts with bundled libexpat). (Jani)
- Fixed bug #24980 (array_reduce() uses first element as default running
  total). (Ilia)
- Fixed bug #24977 (Revert mysql_select_db optimization). (Ilia)
- Fixed bug #24909 (Bad random numbers with ZTS builds on Solaris). (Ilia)
- Fixed bug #24951 (ob_flush() needlessly destroys output handler). (Ilia)
- Fixed bug #24897 (inconsistent behavior of shuffle() & array_multisort()).
  (Ilia, Jani)
- Fixed bug #24792 (--enable-zend-multibyte causes random segfaults with ZTS).
  (fujimoto)
- Fixed bug #24142 (workaround for a gcc bug affecting round()). (Marcus, Ilia)
- Fixed bug #24063 (serialize() missing 0 after the . on scientific notation).
  (Marcus, Ilia)
- Fixed bug #23936 (ext/interbase: fail to select and fetch). (Ard)
- Fixed bug #22947 (Ack() inside win32/sendmail.c may stall in certain
  situations). (Ilia)
- Fixed bug #22245 (References inside $_SESSION not being handled). (Ilia)
- Fixed bug #21957 (serialize() mangles objects with __sleep). (Ilia)
- Fixed bug #21918 (strange behaviour of mixed type in array-keys). (Marcus)
- Fixed bug #20896 (-s -w modes with php-cli cause php to hang). (Ilia)
- Fixed bug #7014 (crash in _php_ibase_error() after request shutdown). (Ard)

07 Aug 2003, Version 4.3.3RC3
- Fixed bug #24958 (Incorrect handling of 404s). (Ilia, Justin)
- Fixed bug #24936 (ext/fdf not linked properly as shared extension). (Jani)
- Fixed bug #24883 (variables_order and gpc_order being ignored). (Ilia)
- Fixed bug #24871 (methods misidentified as constructors). (Ilia)